--- a/_pages/case-study/admit-me/admit-me.html
+++ b/_pages/case-study/admit-me/admit-me.html
@@ -22,7 +22,7 @@ keywords: ''
       <h1 class="main-title">Trustful cooperation in education domain with Admit.me for years</h1>
       <div class="col-2 margin-top" style="grid-template-columns: 1fr auto">
         <div class="column-wrapper center-content small">
-          <div class="image" id="image1" style="background-image: url('../../assets/img/case-study/admit/admit-1.png')"></div>
+          <div class="image" id="image1" style="background-image: url('/assets/img/case-study/admit/admit-1.png')"></div>
         </div>
         <div class="column-wrapper column-content huge margin-left margin-top">
           <h2>Client</h2>
@@ -48,7 +48,7 @@ keywords: ''
           <div>The most critical requirement was to ensure an extremely short time-to-market for new features, including dramatic changes in the core functionality.</div>
         </div>
         <div class="column-wrapper big margin-left">
-          <div class="image" id="image2" style="background-image: url('../../assets/img/case-study/admit/admit-2.png')"></div>
+          <div class="image" id="image2" style="background-image: url('/assets/img/case-study/admit/admit-2.png')"></div>
         </div>
       </div>
     </div>
@@ -57,14 +57,14 @@ keywords: ''
     <div class="content">
       <div class="col-2">
         {% include quote/quote.html
-          avatarUrl="../../assets/img/case-study/admit/avatar-1.jpg"
+          avatarUrl="/assets/img/case-study/admit/avatar-1.jpg"
           authorName="Eric Allen"
           authorPosition="Founder of Admit.Me, President in Admit Advantage"
           authorUrl="https://www.linkedin.com/in/ericballen/"
           content="\"Slava and I have had long and fruitful cooperation since 2014. His team has always been a technical partner for us, making the right decisions and providing services just when necessary and protecting us from unnecessary costs. Together we have pivot our startup several times and now are ready to scale.\""
         %}
         {% include quote/quote.html
-          avatarUrl="../../assets/img/case-study/admit/avatar-2.jpg"
+          avatarUrl="/assets/img/case-study/admit/avatar-2.jpg"
           authorName="Shawn Eliav"
           authorPosition="Director of Product & Marketing in Admit.Me"
           authorUrl="https://www.linkedin.com/in/shawneliav/"
@@ -108,19 +108,19 @@ keywords: ''
       <h3 class="text-center technologies">The tools and technologies we used were:</h3>
       <div class="logos-row">
         <div>
-          <img src="../../assets/img/case-study/icons/C-sharp.png" alt="C# ASP .Net back-end">
+          <img src="/assets/img/case-study/icons/C-sharp.png" alt="C# ASP .Net back-end">
         </div>
         <div>
-          <img src="../../assets/img/case-study/icons/ASP.NET.png" alt="ASP .Net back-end">
+          <img src="/assets/img/case-study/icons/ASP.NET.png" alt="ASP .Net back-end">
         </div>
         <div>
-          <img src="../../assets/img/case-study/icons/Angular.png" alt="AngularJS front-end">
+          <img src="/assets/img/case-study/icons/Angular.png" alt="AngularJS front-end">
         </div>
         <div>
-          <img src="../../assets/img/case-study/icons/mongoDB.png" alt="MongoDB replica set">
+          <img src="/assets/img/case-study/icons/mongoDB.png" alt="MongoDB replica set">
         </div>
         <div>
-          <img src="../../assets/img/case-study/icons/AWS.png" alt="Amazon Web Services Cloud">
+          <img src="/assets/img/case-study/icons/AWS.png" alt="Amazon Web Services Cloud">
         </div>
       </div>
     </div>
