--- a/_pages/case-study/wikiart/wikiart.html
+++ b/_pages/case-study/wikiart/wikiart.html
@@ -23,7 +23,7 @@ keywords: ""
       <div class="col-2 margin-top">
         <div class="column-wrapper center-content">
           <div class="image" id="image1"
-               style="background-image: url('../../assets/img/case-study/wikiart/wikiart-1.jpg')"></div>
+               style="background-image: url('/assets/img/case-study/wikiart/wikiart-1.jpg')"></div>
         </div>
         <div class="column-wrapper margin-left column-content">
           <h2>Project</h2>
@@ -57,7 +57,7 @@ keywords: ""
           </div>
         </div>
         <div class="column-wrapper big">
-          <div class="image" style="background-image: url('../../assets/img/case-study/wikiart/wikiart-2.png')"></div>
+          <div class="image" style="background-image: url('/assets/img/case-study/wikiart/wikiart-2.png')"></div>
         </div>
       </div>
     </div>
@@ -65,7 +65,7 @@ keywords: ""
   <section class="section-black">
     <div class="content">
       {% include quote/quote.html
-      avatarUrl="../../assets/img/case-study/wikiart/avatar.jpg"
+      avatarUrl="/assets/img/case-study/wikiart/avatar.jpg"
       authorName="Ievgen Silin"
       authorPosition="Co-founder of Wikiart.org"
       authorUrl="https://www.linkedin.com/in/trbrs/"
@@ -121,19 +121,19 @@ keywords: ""
       <h3 class="text-center technologies">The tools and technologies we used were:</h3>
       <div class="logos-row">
         <div>
-          <img src="../../assets/img/case-study/icons/C-sharp.png" alt="C# ASP .Net back-end">
+          <img src="/assets/img/case-study/icons/C-sharp.png" alt="C# ASP .Net back-end">
         </div>
         <div>
-          <img src="../../assets/img/case-study/icons/Angular.png" alt="AngularJS front-end">
+          <img src="/assets/img/case-study/icons/Angular.png" alt="AngularJS front-end">
         </div>
         <div>
-          <img src="../../assets/img/case-study/icons/mongoDB.png" alt="MongoDB replica set">
+          <img src="/assets/img/case-study/icons/mongoDB.png" alt="MongoDB replica set">
         </div>
         <div>
-          <img src="../../assets/img/case-study/icons/microsoft-sql.png" alt="Microsoft SQL server">
+          <img src="/assets/img/case-study/icons/microsoft-sql.png" alt="Microsoft SQL server">
         </div>
         <div>
-          <img src="../../assets/img/case-study/icons/AWS.png" alt="Amazon Web Services Cloud">
+          <img src="/assets/img/case-study/icons/AWS.png" alt="Amazon Web Services Cloud">
         </div>
       </div>
     </div>
@@ -142,7 +142,7 @@ keywords: ""
     <div class="content">
       <div class="col-2">
         <div class="column-wrapper">
-          <div class="image" style="background-image: url('../../assets/img/case-study/wikiart/wikiart-3.png')"></div>
+          <div class="image" style="background-image: url('/assets/img/case-study/wikiart/wikiart-3.png')"></div>
         </div>
         <div class="column-wrapper big remove-padding">
           <div class="column-content">
