--- a/_pages/case-study/yoy/yoy.html
+++ b/_pages/case-study/yoy/yoy.html
@@ -25,7 +25,7 @@ keywords: ""
           <div
             class="image"
             id="image1"
-            style="background-image: url('../../assets/img/case-study/yoy/yoy-1.jpg')"
+            style="background-image: url('/assets/img/case-study/yoy/yoy-1.jpg')"
           ></div>
         </div>
         <div class="column-wrapper column-content margin-left margin-top">
@@ -73,7 +73,7 @@ keywords: ""
           <div
             class="image"
             id="image2"
-            style="background-image: url('../../assets/img/case-study/yoy/yoy-2.jpg')"
+            style="background-image: url('/assets/img/case-study/yoy/yoy-2.jpg')"
           ></div>
         </div>
       </div>
@@ -82,7 +82,7 @@ keywords: ""
   <section style="background-color: #00893a;">
     <div class="content">
       {% include quote/quote.html
-        avatarUrl="../../assets/img/case-study/yoy/avatar.jpg"
+        avatarUrl="/assets/img/case-study/yoy/avatar.jpg"
         authorName="Ihor Khvorostianyi"
         authorPosition="Language Adviser, Project 'Learning Together'"
         authorUrl="https://www.linkedin.com/in/ihor-khvorostianyi-16584b1b6/"
@@ -129,10 +129,10 @@ keywords: ""
         <br />
         <div class="logos-row yoy-logos">
           <div>
-            <img src="../../assets/img/case-study/yoy/googlestore.svg" alt="Google Play">
+            <img src="/assets/img/case-study/yoy/googlestore.svg" alt="Google Play">
           </div>
           <div>
-            <img src="../../assets/img/case-study/yoy/appstore.svg" alt="App Store">
+            <img src="/assets/img/case-study/yoy/appstore.svg" alt="App Store">
           </div>
         </div>
       </div>
