--- a/_pages/case-study/bsg/bsg.html
+++ b/_pages/case-study/bsg/bsg.html
@@ -22,7 +22,7 @@ keywords: ''
       <h1 class="main-title">A lightning-fast website for a reputable cybersec company in Ukraine</h1>
       <div class="col-2 margin-top">
         <div class="column-wrapper big">
-          <div class="image" id="image1" style="background-image: url('../../assets/img/case-study/bsg/title.png')"></div>
+          <div class="image" id="image1" style="background-image: url('/assets/img/case-study/bsg/title.png')"></div>
         </div>
         <div class="column-wrapper column-content margin-top margin-left">
           <h2>Client</h2>
@@ -48,7 +48,7 @@ keywords: ''
           <div>Developing a tool for pre-qualifying leads came as an extra task.</div>
         </div>
         <div class="column-wrapper center-content big">
-          <div class="image" id="image2" style="background-image: url('../../assets/img/case-study/bsg/challenge2_!!.png'); background-size: contain;"></div>
+          <div class="image" id="image2" style="background-image: url('/assets/img/case-study/bsg/challenge2_!!.png'); background-size: contain;"></div>
         </div>
       </div>
     </div>
@@ -56,7 +56,7 @@ keywords: ''
   <section class="section-black">
     <div class="content">
       {% include quote/quote.html
-        avatarUrl="../../assets/img/case-study/bsg/avatar.webp"
+        avatarUrl="/assets/img/case-study/bsg/avatar.webp"
         authorName="Andriy Varusha"
         authorPosition="COO and co-founder"
         authorUrl="https://www.linkedin.com/in/andriyvarusha/"
@@ -84,16 +84,16 @@ keywords: ''
       <br />
       <div class="logos-row">
         <div>
-          <img src="../../assets/img/case-study/icons/logo_html.png" alt="HTML 5" style="max-height: 100px;">
+          <img src="/assets/img/case-study/icons/logo_html.png" alt="HTML 5" style="max-height: 100px;">
         </div>
         <div>
-          <img src="../../assets/img/case-study/icons/logo_css.png" alt="CSS 3" style="max-height: 100px;">
+          <img src="/assets/img/case-study/icons/logo_css.png" alt="CSS 3" style="max-height: 100px;">
         </div>
         <div>
-          <img src="../../assets/img/case-study/icons/javascript-logo.png" alt="Vanilla Javascript" style="max-height: 100px;">
+          <img src="/assets/img/case-study/icons/javascript-logo.png" alt="Vanilla Javascript" style="max-height: 100px;">
         </div>
         <div>
-          <img src="../../assets/img/case-study/icons/react-logo.png" alt="React components" style="max-height: 100px;">
+          <img src="/assets/img/case-study/icons/react-logo.png" alt="React components" style="max-height: 100px;">
         </div>
       </div>
     </div>
@@ -114,7 +114,7 @@ keywords: ''
           </div>
         </div>
         <div class="column-wrapper center-content margin-left huge">
-          <div class="image" id="image3" style="background-image: url('../../assets/img/case-study/bsg/results-640.webp')"></div>
+          <div class="image" id="image3" style="background-image: url('/assets/img/case-study/bsg/results-640.webp')"></div>
         </div>
       </div>
     </div>
