--- a/_pages/case-study/smartlane/smartlane.html
+++ b/_pages/case-study/smartlane/smartlane.html
@@ -54,7 +54,7 @@ keywords: ""
   <section class="section-black">
     <div class="content">
       {% include quote/quote.html
-        avatarUrl="/assets/img/case-study/smartlane/avatar.jpeg"
+        avatarUrl="/assets/img/case-study/smartlane/avatar.jpg"
         authorName="Daniel Rodriguez"
         authorPosition="Adventurer Entrepreneur Developer"
         authorUrl="https://www.linkedin.com/in/danielwrodriguez/"
