--- a/_pages/case-study/bsg/bsg.html
+++ b/_pages/case-study/bsg/bsg.html
@@ -47,7 +47,7 @@ keywords: ''
           <br />
           <div>Developing a tool for pre-qualifying leads came as an extra task.</div>
         </div>
-        <div class="column-wrapper center-content big">
+        <div class="column-wrapper center-content big remove-margin">
           <div class="image" id="image2" style="background-image: url('/assets/img/case-study/bsg/challenge2_!!.png'); background-size: contain;"></div>
         </div>
       </div>
