Change all not horizontal usecase images to 640

--- a/_pages/case-study/admit-me/admit-me.html
+++ b/_pages/case-study/admit-me/admit-me.html
@@ -22,7 +22,7 @@ keywords: ''
       <h1 class="main-title">Trustful cooperation in education domain with Admit.me for years</h1>
       <div class="col-2 margin-top" style="grid-template-columns: 1fr auto">
         <div class="column-wrapper center-content small">
-          <div class="image" id="image1" style="background-image: url('/assets/img/case-study/admit/admit-1.png')"></div>
+          <div class="image" id="image1" style="background-image: url('/assets/img/case-study/admit/1-Admit-HappyStudent-640.webp')"></div>
         </div>
         <div class="column-wrapper column-content huge margin-left margin-top">
           <h2>Client</h2>
@@ -48,7 +48,7 @@ keywords: ''
           <div>The most critical requirement was to ensure an extremely short time-to-market for new features, including dramatic changes in the core functionality.</div>
         </div>
         <div class="column-wrapper big margin-left">
-          <div class="image" id="image2" style="background-image: url('/assets/img/case-study/admit/admit-2.png')"></div>
+          <div class="image" id="image2" style="background-image: url('/assets/img/case-study/admit/2-Admit-iMac-screen-right-640.webp')"></div>
         </div>
       </div>
     </div>
