--- a/_pages/case-study/smartlane/smartlane.html
+++ b/_pages/case-study/smartlane/smartlane.html
@@ -46,7 +46,7 @@ keywords: ""
           <div>In the beginning, we only had clickable wireframes. Our task was to create a 'skeleton' of the solution while the designer was putting the finishing touches. Then, we had to launch a neatly designed MVP with a dedicated environment for demonstrating the product. The later phase required us to fully develop the product and prepare it for the next funding round.</div>
         </div>
         <div class="column-wrapper big">
-          <div class="image" id="image2" style="background-image: url('/assets/img/case-study/smartlane/smartlane-2.png')"></div>
+          <div class="image" id="image2" style="background-image: url('/assets/img/case-study/smartlane/2-SmartLane-2-mobiles-640.webp')"></div>
         </div>
       </div>
     </div>
