--- a/_pages/case-study/wikiart/wikiart.html
+++ b/_pages/case-study/wikiart/wikiart.html
@@ -23,7 +23,7 @@ keywords: ""
       <div class="col-2 margin-top">
         <div class="column-wrapper center-content">
           <div class="image" id="image1"
-               style="background-image: url('/assets/img/case-study/wikiart/wikiart-1.jpg')"></div>
+               style="background-image: url('/assets/img/case-study/wikiart/1-Wikiart-Collage-640.webp')"></div>
         </div>
         <div class="column-wrapper margin-left column-content">
           <h2>Project</h2>
@@ -57,7 +57,7 @@ keywords: ""
           </div>
         </div>
         <div class="column-wrapper big">
-          <div class="image" style="background-image: url('/assets/img/case-study/wikiart/wikiart-2.png')"></div>
+          <div class="image" style="background-image: url('/assets/img/case-study/wikiart/2-Wikiart-MacBookPro-with-Van-Gogh-640.webp')"></div>
         </div>
       </div>
     </div>
@@ -142,7 +142,7 @@ keywords: ""
     <div class="content">
       <div class="col-2">
         <div class="column-wrapper">
-          <div class="image" style="background-image: url('/assets/img/case-study/wikiart/wikiart-3.png')"></div>
+          <div class="image" style="background-image: url('/assets/img/case-study/wikiart/3-Wikiart-SimilarWeb-Google-stats-640.webp')"></div>
         </div>
         <div class="column-wrapper big remove-padding">
           <div class="column-content">
