--- a/_pages/case-study/yoy/yoy.html
+++ b/_pages/case-study/yoy/yoy.html
@@ -25,7 +25,7 @@ keywords: ""
           <div
             class="image"
             id="image1"
-            style="background-image: url('/assets/img/case-study/yoy/yoy-1.jpg')"
+            style="background-image: url('/assets/img/case-study/yoy/1-Yoy-Android-640.webp')"
           ></div>
         </div>
         <div class="column-wrapper column-content margin-left margin-top">
@@ -73,7 +73,7 @@ keywords: ""
           <div
             class="image"
             id="image2"
-            style="background-image: url('/assets/img/case-study/yoy/yoy-2.jpg')"
+            style="background-image: url('/assets/img/case-study/yoy/2-Yoy-2-iPhones-640.webp')"
           ></div>
         </div>
       </div>
