remove extra padding

--- a/_pages/case-study/admit-me/admit-me.html
+++ b/_pages/case-study/admit-me/admit-me.html
@@ -39,7 +39,7 @@ keywords: ''
   <section class="section-grey">
     <div class="content">
       <div class="col-2">
-        <div class="column-wrapper column-content margin-left">
+        <div class="column-wrapper column-content">
           <h2>Challenge</h2>
           <div>Our team started cooperating with Admit.me at the concept stage and treated this project as a promising start-up looking for an effective business model.</div>
           <br />
@@ -128,7 +128,7 @@ keywords: ''
   <section class="section-grey">
     <div class="content">
       <div class="col-2">
-        <div class="column-wrapper column-content margin-left big">
+        <div class="column-wrapper column-content big">
           <h2>Results</h2>
           <div>Thanks to well-thought-out technological decisions and our team's solid experience in Agile development, the customer was able to run the MVP in the production environment in just three months.</div>
           <br />
