--- a/_pages/case-study/bsg/bsg.html
+++ b/_pages/case-study/bsg/bsg.html
@@ -101,7 +101,7 @@ keywords: ''
   <section class="section-grey">
     <div class="content">
       <div class="col-2">
-        <div class="column-wrapper column-content margin-left big">
+        <div class="column-wrapper column-content big">
           <h2>Results</h2>
           <div>
             <ul>
