Initial Percona case study for testing

--- a/_pages/case-study/wikiart/wikiart.html
+++ b/_pages/case-study/wikiart/wikiart.html
@@ -162,7 +162,7 @@ keywords: ""
               about art. And we were happy to help it succeed.
             </div>
           </div>
-
+        </div>
       </div>
     </div>
   </section>
