--- a/_pages/case-study/yoy/yoy.html
+++ b/_pages/case-study/yoy/yoy.html
@@ -16,7 +16,7 @@ keywords: ""
   ~ All rights reserved
   -->
 {% endcomment %}
-<div class="case-study yoy"> <!--{{ site.GA_id }}--> 
+<div class="case-study yoy"> 123 <!--{{ site.GA_id }}--> 
   <section>
     <div class="content">
       <h1 class="main-title">Flutter Edtech App for primary school students in national minorities</h1>
