--- a/_pages/careers/careers.html
+++ b/_pages/careers/careers.html
@@ -1,5 +1,6 @@
 ---
 permalink: "/careers/"
+canonicalLink: "canonical"
 title: "Open Positions in Implex"
 layout: default-static-header
 description: "Find a vacancy to your taste among engineering or managements positions in Implex"
