--- a/_pages/careers/careers.html
+++ b/_pages/careers/careers.html
@@ -1,6 +1,6 @@
 ---
 permalink: "/careers/"
-canonicalLink: "https://www.google.com/"
+canonicalLink: ""
 title: "Open Positions in Implex"
 layout: default-static-header
 description: "Find a vacancy to your taste among engineering or managements positions in Implex"
