--- a/_pages/case-study/case-study.html
+++ b/_pages/case-study/case-study.html
@@ -1,6 +1,6 @@
 ---
 permalink: "/case-study/"
-canonicalLink: "/canonical"
+canonicalLink: ""
 title: "List of Featured Case Studies | Implex"
 description: "Find examples of Implex work in mobile and web development for different business domain from education to marketplaces"
 ogDescription: "Find examples of Implex work in mobile and web development for different business domain from education to marketplaces"
