--- a/_pages/case-study/percona/percona.html
+++ b/_pages/case-study/percona/percona.html
@@ -1,9 +1,10 @@
 ---
-title: "Percona Title ToDo | Implex"
-description: "Percona Meta Description ToDo"
-ogDescription: "Percona Meta Description ToDo"
-ogImage: "/assets/img/case-study/bsg/og-image-case-study_bsg.png"
+title: "Percona's Telemetry Service: Data-Driven Product Development | Implex"
+description: "Percona collaborated with Implex to revamp their Telemetry service, enabling improved data-backed decision-making processes for product development"
+ogDescription: "Percona collaborated with Implex to revamp their Telemetry service, enabling improved data-backed decision-making processes for product development"
+ogImage: "/assets/img/case-study/percona/og-image-case-study_Percona-1200.webp"
 permalink: /case-study/percona
+canonicalLink: ""
 layout: default-static-header
 showSlider: true
 showContactForm: true
@@ -19,15 +20,15 @@ keywords: ''
 <div class="case-study percona">
   <section>
     <div class="content">
-      <h1 class="main-title">Percona H1 ToDo</h1>
+      <h1 class="main-title">Percona's Telemetry Service for Data-Driven Decision Making and Product Development</h1>
       <div class="col-2 margin-top">
         <div class="column-wrapper center-content">
           <div class="image" id="image1" style="background-image: url('/assets/img/case-study/percona/1-Percona-logo-640.webp')"></div>
         </div>
         <div class="column-wrapper column-content big remove-margin">
           <h2>Client</h2>
-          <div>Percona is a leading provider of open-source database software and services. An average number of monthly users counts [number] engineers, product managers, and other tech specialists.] Percona offers a range of products and services related to database management, including support, consulting, training, and managed services. Their customers include a wide range of organizations, from small startups to large enterprises, and their software is used by many popular websites and applications, such as Cisco, Adobe, Netflix, Zoho.</div>
-          <br/>
+          <div><strong>Percona</strong> is a leading provider of open-source database software and services. An average number of monthly users counts [number] engineers, product managers, and other tech specialists. Percona offers a range of products and services related to database management, including support, consulting, training, and managed services. Their customers include a wide range of organizations, from small startups to large enterprises, and their software is used by many popular websites and applications, such as Cisco, Adobe, Netflix, Zoho.</div>
+          <br />
           <div><strong>Industry</strong>: Software Development</div>
           <div><strong>Location</strong>: USA</div>
         </div>
@@ -39,7 +40,13 @@ keywords: ''
       <div class="col-2">
         <div class="column-wrapper column-content big">
           <h2>Challenge</h2>
-          <div>Percona had a lot of new ideas and requirements towards the Percona Monitoring and Management (PMM) solution. The product backlog was full and roadmaps were created for the next few years. Percona prioritized revamping of existing Telemetry service as one of the most important features to implement. The business role of Telemetry is to enable data backed decision making processes. The service should have been solving data collection challenges and thus providing information that would help to structure and prioritize the implementation of the next scope of product development.   From a technical perspective Telemetry had to be lightweight, scalable and easy to use. Current Percona Teams had limited capacity to deliver all crucial features within the upcoming Release. So Percona partnered with Implex to design and revamp their existing Telemetry service and make it configurable and easy to change.</div>
+          <div>
+            Percona had a lot of new ideas and requirements towards the Percona Monitoring and Management (PMM) solution. The product backlog was full and roadmaps were created for the next few years. Percona prioritized revamping of existing Telemetry service as one of the most important features to implement. The business role of Telemetry is to enable data backed decision making processes.
+          </div>
+          <br />
+          <div>
+            The service should have been solving data collection challenges and thus providing information that would help to structure and prioritize the implementation of the next scope of product development.   From a technical perspective Telemetry had to be lightweight, scalable and easy to use. Current Percona Teams had limited capacity to deliver all crucial features within the upcoming Release. So Percona partnered with Implex to design and revamp their existing Telemetry service and make it configurable and easy to change.
+          </div>
         </div>
         <div class="column-wrapper center-content huge remove-margin">
           <div class="image" id="image2" style="background-image: url('/assets/img/case-study/percona/2-Percona-monitor-640.webp'); background-size: contain;"></div>
@@ -61,33 +68,41 @@ keywords: ''
   <section>
     <div class="content">
       <h2>Solution</h2>
-      <div class="col-2 margin-top">
+      <div class="text-center sub-heading">Тут не вистачає якогось тексту який підсумовує нашу роботу за період, типу ми успішно зробили декілька модулів, а зараз приймаємо участь в проєкті трансформації команд в Empowered.</div>
+<!--      <div class="col-2 margin-top">-->
+      <div class="col-2">
         <div class="column-content">
-          <div>Our team was made up of experienced software engineers who had worked on similar projects in the past. We worked closely with Percona Product manager and architect to understand their requirements and to design a service that met their needs. As infrastructure we used AWS EKS on EC2 instances, which allowed us to deploy and manage the service in a scalable and efficient way. During implementation we used ClickHouse as storage engine and Grafana for collecting and visualizing the data, which allowed Percona to monitor PMM in real-time and make informed decisions based on the data they collected.</div>
+          <h3 class="subtitle"><strong>Collaborative Approach & Infrastructure Design</strong></h3>
+          <div>Our team was made up of experienced software engineers who had worked on similar projects in the past. We worked closely with Percona Product manager and architect to understand their requirements and to design a service that met their needs. As infrastructure we used AWS EKS on EC2 instances, which allowed us to deploy and manage the service in a scalable and efficient way. During implementation we used ClickHouse as storage engine and Grafana for collecting and visualizing the data, which allowed Percona to monitor PMM in real-time and make informed decisions based on the data they collected. To ensure that the service was of high quality, we implemented a rigorous testing and review process.</div>
         </div>
         <div class="column-content">
+          <h3 class="subtitle"><strong>Quality Assurance & Continuous Improvement</strong></h3>
           <div>
-            To ensure that the service was of high quality, we implemented a rigorous testing and review process. We used automated testing tools to ensure that the service met all of its functional requirements, and we also conducted extensive manual testing to ensure that the service was easy to use and met Percona's needs.</div>
+            We used automated testing tools to ensure that the service met all of its functional requirements, and we also conducted extensive manual testing to ensure that the service was easy to use and met Percona's needs.</div>
           <br />
           <div>Worth to add that  during implementation of the new service, our team was proposing additional technical improvements which allowed to increase productivity of all development teams, such as enabling debugging and implementation of PMM using Apple silicon based machine, etc.</div>
         </div>
       </div>
-      <h3 class="text-center technologies">The tools and technologies we used were: ToDo - change icons</h3>
+      <h3 class="text-center technologies">The tools and technologies we used were:</h3>
       <br />
       <div class="logos-row">
         <div>
-          <img src="/assets/img/case-study/icons/logo_html.png" alt="HTML 5" style="max-height: 100px;">
+          <img src="/assets/img/case-study/icons/Percona-logo-go.webp" alt="GoLang back-end">
         </div>
         <div>
-          <img src="/assets/img/case-study/icons/logo_css.png" alt="CSS 3" style="max-height: 100px;">
+          <img src="/assets/img/case-study/icons/Percona-logo-typescript.webp" alt="TypeScript back-end">
         </div>
         <div>
-          <img src="/assets/img/case-study/icons/javascript-logo.png" alt="Vanilla Javascript" style="max-height: 100px;">
+          <img src="/assets/img/case-study/icons/Percona-logo-clickhouse.webp" alt="ClickHouse DB">
         </div>
         <div>
-          <img src="/assets/img/case-study/icons/react-logo.png" alt="React components" style="max-height: 100px;">
+          <img src="/assets/img/case-study/icons/Percona-logo-kubernetes.webp" alt="Kubernetes">
+        </div>
+        <div>
+          <img src="/assets/img/case-study/icons/Percona-logo-grafana.webp" alt="Grafana">
         </div>
       </div>
+
     </div>
   </section>
   <section class="section-grey">
@@ -100,11 +115,16 @@ keywords: ''
           <div class="column-content">
             <h2>Results</h2>
             <div>
-              Our team's implementation of the new Telemetry service was a success and had a significant impact on Percona's business decision process. The Telemetry service allowed Percona to collect data on how the PMM tool was being used in the real world. They could see which features were being used the most, which parts of the software were causing the most problems, and which configurations were most popular. This data was used to identify and fix issues more quickly, and to prioritize new features based on user needs. <br/>
+              Our team's implementation of the new Telemetry service was a success and had a significant impact on Percona's business decision process. The Telemetry service allowed Percona to collect data on how the PMM tool was being used in the real world. They could see which features were being used the most, which parts of the software were causing the most problems, and which configurations were most popular. This data was used to identify and fix issues more quickly, and to prioritize new features based on user needs.
+            </div> 
+            <br />
+            <div>
               The Telemetry service was implemented quickly and in high quality, which allowed Percona to meet their product release schedule. The service was also easy to use and scalable, which allowed Percona to manage and monitor their software more efficiently.
             </div>
-            <br/>
-            <div>Overall, implementation of a Telemetry helped to improve the product development flow in __%, which resulted in ______ [would be nice to add some data, stats or numbers].</div> 
+            <br />
+            <div>
+              Overall, implementation of a Telemetry helped to improve the product development flow in __%, which resulted in ______ [would be nice to add some data, stats or numbers].
+            </div> 
           </div>
         </div>
       </div>
