Percona case, try 2

--- a/_pages/case-study/percona/percona.html
+++ b/_pages/case-study/percona/percona.html
@@ -20,14 +20,14 @@ keywords: ''
 <div class="case-study percona">
   <section>
     <div class="content">
-      <h1 class="main-title">Percona's Telemetry Service for Data-Driven Decision Making and Product Development</h1>
+      <h1 class="main-title">Telemetry Service for data-driven decisions & product growth</h1>
       <div class="col-2 margin-top">
         <div class="column-wrapper center-content">
           <div class="image" id="image1" style="background-image: url('/assets/img/case-study/percona/1-Percona-logo-640.webp')"></div>
         </div>
         <div class="column-wrapper column-content big remove-margin">
           <h2>Client</h2>
-          <div><strong>Percona</strong> is a leading provider of open-source database software and services. An average number of monthly users counts [number] engineers, product managers, and other tech specialists. Percona offers a range of products and services related to database management, including support, consulting, training, and managed services. Their customers include a wide range of organizations, from small startups to large enterprises, and their software is used by many popular websites and applications, such as Cisco, Adobe, Netflix, Zoho.</div>
+          <div><strong><a href="https://www.percona.com/" target="_blank" rel="noopener noreferrer nofollow">Percona</a></strong> is a leading provider of open-source database software and services. An average number of monthly users counts [number] engineers, product managers, and other tech specialists. Percona offers a range of products and services related to database management, including support, consulting, training, and managed services. Their customers include a wide range of organizations, from small startups to large enterprises, and their software is used by many popular websites and applications, such as Cisco, Adobe, Netflix, Zoho.</div>
           <br />
           <div><strong>Industry</strong>: Software Development</div>
           <div><strong>Location</strong>: USA</div>
@@ -56,13 +56,22 @@ keywords: ''
   </section>
   <section class="section-black">
     <div class="content">
-      {% include quote/quote.html
-        avatarUrl="/assets/img/case-study/bsg/avatar.webp"
-        authorName="Andriy Varusha"
-        authorPosition="COO and co-founder"
-        authorUrl="https://www.linkedin.com/in/andriyvarusha/"
-        content="\"With Implex's help, we were able to achieve the proper look and feel for our website, with the required metrics for the response time and page loading time. I think the engagement of the management, who are the co-founders at the same time and who are focused on problem-solving, is definitely a positive differentiator of Implex.\""
-      %}
+      <div class="col-2">
+        {% include quote/quote.html
+          avatarUrl="/assets/img/case-study/percona/Stephen-Hoffman-200.webp"
+          authorName="Stephen Hoffman"
+          authorPosition="SVP, Engineering at Percona"
+          authorUrl="https://www.linkedin.com/in/stephenhoffman-rdu/"
+          content="\"Here should be your 5-stars feedback :-))).Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eget placerat mi. Morbi erat dolor, facilisis et viverra et, maximus vitae tortor. Cras iaculis purus risus, in euismod nunc fringilla vel. Maecenas quis rutrum lectus.\""
+        %}
+        {% include quote/quote.html
+          avatarUrl="/assets/img/case-study/percona/David-Poole-200.webp"
+          authorName="David Poole"
+          authorPosition="Senior Director of Engineering"
+          authorUrl="https://www.linkedin.com/in/dwhpoole/"
+          content="\"Here should be your 5-stars feedback :-))).Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eget placerat mi. Morbi erat dolor, facilisis et viverra et, maximus vitae tortor. Cras iaculis purus risus, in euismod nunc fringilla vel. Maecenas quis rutrum lectus.\""
+        %}
+      </div>
     </div>
   </section>
   <section>
