--- a/_pages/case-study/yoy/yoy.html
+++ b/_pages/case-study/yoy/yoy.html
@@ -31,7 +31,7 @@ keywords: ""
         </div>
         <div class="column-wrapper column-content margin-left margin-top">
           <h2>Project</h2>
-          <div><strong><a href="https://www.yoy-app.com/home-engl" target="_blank" rel="noopener noreferrer nofollow">YOY</a></strong> is a mobile app for learning the Ukrainian language by primary school students whose native language is Hungarian or Romanian.</div>
+          <div><strong><a class="content-link" href="https://www.yoy-app.com/home-engl" target="_blank" rel="noopener noreferrer nofollow">YOY</a></strong> is a mobile app for learning the Ukrainian language by primary school students whose native language is Hungarian or Romanian.</div>
           <br/>
           <div>The main goal of the app is to help to teach (for teachers) and to learn (for schoolchildren) Ukrainian in educational institutions where the educational process is conducted in the language of a national minority.</div>
           <br/>
