add lazyload plugin

--- a/_pages/case-study/yoy/yoy.html
+++ b/_pages/case-study/yoy/yoy.html
@@ -125,7 +125,7 @@ keywords: ""
         <br />
         <div>This project is of great social importance, and therefore we are delighted to have taken part in it.</div>
         <br />
-        <iframe class="player" src="https://www.youtube.com/embed/mQPWsBDG_jI" title="YOY: Ukrainian - it’s cool!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe class="lazyload player" src="https://www.youtube.com/embed/mQPWsBDG_jI" title="YOY: Ukrainian - it’s cool!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <br />
         <br />
         <div class="logos-row yoy-logos">
