--- a/_pages/case-study/percona/percona.html
+++ b/_pages/case-study/percona/percona.html
@@ -41,11 +41,11 @@ keywords: ''
         <div class="column-wrapper column-content big">
           <h2>Challenge</h2>
           <div>
-            Percona had a lot of new ideas and requirements towards the Percona Monitoring and Management (PMM) solution. The product backlog was full and roadmaps were created for the next few years. Percona prioritized revamping of existing Telemetry service as one of the most important features to implement. The business role of Telemetry is to enable data backed decision making processes.
+            <strong>Percona</strong> had a lot of new ideas and requirements for the Percona Monitoring and Management (PMM) solution. The product backlog was full, and roadmaps were created for the next few years. Percona prioritized revamping the existing Telemetry service as one of the most important features to implement. The business role of Telemetry is to enable data-backed decision-making processes.
           </div>
           <br />
           <div>
-            The service should have been solving data collection challenges and thus providing information that would help to structure and prioritize the implementation of the next scope of product development.   From a technical perspective Telemetry had to be lightweight, scalable and easy to use. Current Percona Teams had limited capacity to deliver all crucial features within the upcoming Release. So Percona partnered with Implex to design and revamp their existing Telemetry service and make it configurable and easy to change.
+            The service should have been solving data collection challenges and thus providing information that would help to structure and prioritize the implementation of the next scope of product development. From a technical perspective, Telemetry had to be lightweight, scalable, and easy to use. Current Percona Teams had limited capacity to deliver all crucial features within the upcoming Release. So Percona partnered with Implex to design and revamp their existing Telemetry service and make it configurable and easy to change.
           </div>
         </div>
         <div class="column-wrapper center-content huge remove-margin">
@@ -77,19 +77,19 @@ keywords: ''
   <section>
     <div class="content">
       <h2>Solution</h2>
-      <div class="text-center sub-heading">Тут не вистачає якогось тексту який підсумовує нашу роботу за період, типу ми успішно зробили декілька модулів, а зараз приймаємо участь в проєкті трансформації команд в Empowered.</div>
+      <div class="text-center sub-heading">Our team successfully developed a scalable Telemetry service and implemented technical improvements for increased productivity. We continue to work together towards the empowered team transformation project.</div>
 <!--      <div class="col-2 margin-top">-->
       <div class="col-2">
         <div class="column-content">
           <h3 class="subtitle"><strong>Collaborative Approach & Infrastructure Design</strong></h3>
-          <div>Our team was made up of experienced software engineers who had worked on similar projects in the past. We worked closely with Percona Product manager and architect to understand their requirements and to design a service that met their needs. As infrastructure we used AWS EKS on EC2 instances, which allowed us to deploy and manage the service in a scalable and efficient way. During implementation we used ClickHouse as storage engine and Grafana for collecting and visualizing the data, which allowed Percona to monitor PMM in real-time and make informed decisions based on the data they collected. To ensure that the service was of high quality, we implemented a rigorous testing and review process.</div>
+          <div>Our team was made up of experienced software engineers who had worked on similar projects in the past. We worked closely with Percona's Product manager and architect to understand their requirements and to design a service that met their needs. We used AWS EKS on EC2 instances as infrastructure, which allowed us to deploy and manage the service in a scalable and efficient way. During implementation, we used ClickHouse as a storage engine and Grafana for collecting and visualizing the data, which allowed Percona to monitor PMM in real-time and make informed decisions based on the data they collected. To ensure that the service was of high quality, we implemented a rigorous testing and review process.</div>
         </div>
         <div class="column-content">
           <h3 class="subtitle"><strong>Quality Assurance & Continuous Improvement</strong></h3>
           <div>
             We used automated testing tools to ensure that the service met all of its functional requirements, and we also conducted extensive manual testing to ensure that the service was easy to use and met Percona's needs.</div>
           <br />
-          <div>Worth to add that  during implementation of the new service, our team was proposing additional technical improvements which allowed to increase productivity of all development teams, such as enabling debugging and implementation of PMM using Apple silicon based machine, etc.</div>
+          <div>Worth to add that during the implementation of the new service, our team was proposing additional technical improvements which allowed to increase the productivity of all development teams, such as enabling debugging and implementation of PMM using an Apple silicon-based machine, etc.</div>
         </div>
       </div>
       <h3 class="text-center technologies">The tools and technologies we used were:</h3>
@@ -128,11 +128,11 @@ keywords: ''
             </div> 
             <br />
             <div>
-              The Telemetry service was implemented quickly and in high quality, which allowed Percona to meet their product release schedule. The service was also easy to use and scalable, which allowed Percona to manage and monitor their software more efficiently.
+              The Telemetry service was implemented quickly and in high quality, which allowed Percona to meet its product release schedule. The service was also easy to use and scalable, which allowed Percona to manage and monitor their software more efficiently.
             </div>
             <br />
             <div>
-              Overall, implementation of a Telemetry helped to improve the product development flow in __%, which resulted in ______ [would be nice to add some data, stats or numbers].
+              Overall, the implementation of a Telemetry helped to improve the product development flow in __%, which resulted in ______ [would be nice to add some data, stats or numbers].
             </div> 
           </div>
         </div>
