--- a/_pages/case-study/wikiart/wikiart.html
+++ b/_pages/case-study/wikiart/wikiart.html
@@ -74,7 +74,7 @@ keywords: ""
       demonstrated top-notch problem-solving skills. In particular, they showed flexibility in solving challenging UX/UI
       issues. They successfully managed performance at the peak loads after publications on Reddit, as well as constant
       intensive load caused by search bots. Finally, during the migration to the updated version, the team synced
-      operations of the old and the new solutions.\"
+      operations of the old and the new solutions.\""
 
       I definitely recommend them."
       %}
