a href link style

--- a/_pages/case-study/percona/percona.html
+++ b/_pages/case-study/percona/percona.html
@@ -27,7 +27,7 @@ keywords: ''
         </div>
         <div class="column-wrapper column-content big remove-margin">
           <h2>Client</h2>
-          <div><strong><a href="https://www.percona.com/" target="_blank" rel="noopener noreferrer nofollow">Percona</a></strong> is a leading provider of open-source database software and services. An average number of monthly users counts [number] engineers, product managers, and other tech specialists. Percona offers a range of products and services related to database management, including support, consulting, training, and managed services. Their customers include a wide range of organizations, from small startups to large enterprises, and their software is used by many popular websites and applications, such as Cisco, Adobe, Netflix, Zoho.</div>
+          <div><strong><a class="content-link" href="https://www.percona.com/" target="_blank" rel="noopener noreferrer nofollow">Percona</a></strong> is a leading provider of open-source database software and services. An average number of monthly users counts [number] engineers, product managers, and other tech specialists. Percona offers a range of products and services related to database management, including support, consulting, training, and managed services. Their customers include a wide range of organizations, from small startups to large enterprises, and their software is used by many popular websites and applications, such as Cisco, Adobe, Netflix, Zoho.</div>
           <br />
           <div><strong>Industry</strong>: Software Development</div>
           <div><strong>Location</strong>: USA</div>
