--- a/_pages/case-study/quotium/quotium.html
+++ b/_pages/case-study/quotium/quotium.html
@@ -20,7 +20,7 @@ keywords: ''
 <div class="case-study quotium">
   <section>
     <div class="content">
-      <h1 class="main-title">Turning Quotium's unusual vision into a novel map-based web product</h1>
+      <h1 class="main-title">Turning unusual vision into a novel map-based web product</h1>
       <div class="col-2 margin-top">
         <div class="column-wrapper center-content">
           <div class="image" id="image1" style="background-image: url('/assets/img/case-study/percona/1-Percona-logo-640.webp')"></div>
