--- a/_pages/case-study/quotium/quotium.html
+++ b/_pages/case-study/quotium/quotium.html
@@ -22,10 +22,10 @@ keywords: ''
     <div class="content">
       <h1 class="main-title">Turning unusual vision into a novel map-based web product</h1>
       <div class="col-2 margin-top">
-        <div class="column-wrapper center-content">
-          <div class="image" id="image1" style="background-image: url('/assets/img/case-study/percona/1-Percona-logo-640.webp')"></div>
+        <div class="column-wrapper big remove-margin">
+          <div class="image" id="image1" style="background-image: url('/assets/img/case-study/quotium/1-Quotium-client-1280.webp')"></div>
         </div>
-        <div class="column-wrapper column-content big remove-margin">
+        <div class="column-wrapper column-content huge remove-margin">
           <h2>Client</h2>
           <div><strong><a class="content-link" href="http://www.quotium.com/" target="_blank" rel="noopener noreferrer nofollow">Quotium</a></strong> is a consulting company that offers solutions to manage business processes automation, performance, and security. It is specializing in artificial intelligence with projects focused on machine learning, natural language processing, computer vision, and more. Since 2222, the company has completed over 200 projects for more than 100 clients worldwide.</div>
           <br />
@@ -55,7 +55,7 @@ keywords: ''
           <div>Not only did we have to implement an intuitively understandable design, but to integrate with Quotium's knowledge base while maintaining a high level of website performance without skyrocketing costs.</div>
         </div>
         <div class="column-wrapper center-content huge remove-margin">
-          <div class="image" id="image2" style="background-image: url('/assets/img/case-study/percona/2-Percona-monitor-640.webp'); background-size: contain;"></div>
+          <div class="image" id="image2" style="background-image: url('/assets/img/case-study/quotium/2-Quotium-macbook-1280.webp'); background-size: contain;"></div>
         </div>
       </div>
     </div>
@@ -63,7 +63,7 @@ keywords: ''
   <section class="section-black">
     <div class="content">
       {% include quote/quote.html
-        avatarUrl="/assets/img/case-study/percona/Stephen-Hoffman-200.webp"
+        avatarUrl="/assets/img/case-study/quotium/Elsane-Guglielmino-200.webp"
         authorName="Elsane Guglielmino"
         authorPosition="CEO Quotium Technologies - Business Angel"
         authorUrl="https://www.linkedin.com/in/elsane/"
@@ -113,8 +113,8 @@ keywords: ''
   <section class="section-grey">
     <div class="content">
       <div class="col-2">
-        <div class="column-wrapper center-content big">
-          <div class="image" style="background-image: url('/assets/img/case-study/percona/3-Percona-dashboard-640.webp')"></div>
+        <div class="column-wrapper center-content">
+          <div class="image" style="background-image: url('/assets/img/case-study/quotium/3-Quotium-phone-hand-1280.webp')"></div>
         </div>
         <div class="column-wrapper big remove-padding">
           <div class="column-content">
