--- a/_pages/case-study/percona/percona.html
+++ b/_pages/case-study/percona/percona.html
@@ -1,5 +1,5 @@
 ---
-title: "Percona's Telemetry Service: Data-Driven Product Development | Implex"
+title: "Percona's Telemetry service: Data-Driven Product Development | Implex"
 description: "Percona collaborated with Implex to revamp their Telemetry service, enabling improved data-backed decision-making processes for product development"
 ogDescription: "Percona collaborated with Implex to revamp their Telemetry service, enabling improved data-backed decision-making processes for product development"
 ogImage: "/assets/img/case-study/percona/og-image-case-study_Percona-1200.webp"
@@ -20,7 +20,7 @@ keywords: ''
 <div class="case-study percona">
   <section>
     <div class="content">
-      <h1 class="main-title">Telemetry Service for data-driven decisions & product growth</h1>
+      <h1 class="main-title">Telemetry service for data-driven decisions & product growth</h1>
       <div class="col-2 margin-top">
         <div class="column-wrapper center-content">
           <div class="image" id="image1" style="background-image: url('/assets/img/case-study/percona/1-Percona-logo-640.webp')"></div>
