Finished quotium case without feedback

--- a/_pages/case-study/quotium/quotium.html
+++ b/_pages/case-study/quotium/quotium.html
@@ -27,7 +27,7 @@ keywords: ''
         </div>
         <div class="column-wrapper column-content huge remove-margin">
           <h2>Client</h2>
-          <div><strong><a class="content-link" href="http://www.quotium.com/" target="_blank" rel="noopener noreferrer nofollow">Quotium</a></strong> is a consulting company that offers solutions to manage business processes automation, performance, and security. It is specializing in artificial intelligence with projects focused on machine learning, natural language processing, computer vision, and more. Since 2222, the company has completed over 200 projects for more than 100 clients worldwide.</div>
+          <div><strong><a class="content-link" href="https://cyberquantic.com/" target="_blank" rel="noopener noreferrer nofollow">Quotium</a></strong> is a consulting company that offers solutions to manage business processes automation, performance, and security. It is specializing in artificial intelligence with projects focused on machine learning, natural language processing, computer vision, and more. Since 2222, the company has completed over 200 projects for more than 100 clients worldwide.</div>
           <br />
           <div>Additionally, the company has a large knowledge base of use cases for artificial intelligence projects to help clients solve problems and offer ideas based on completed projects by their competitors.</div>
           <br />
@@ -92,19 +92,15 @@ keywords: ''
         </div>
       </div>
       <h3 class="text-center technologies">The tools and technologies we used were:</h3>
-      <br />
       <div class="logos-row">
         <div>
-          <img src="/assets/img/case-study/icons/Percona-logo-go.webp" alt="React.js front-end">
+          <img src="/assets/img/case-study/icons/logo_react.svg" alt="React.js front-end">
         </div>
         <div>
-          <img src="/assets/img/case-study/icons/Percona-logo-typescript.webp" alt="Next.js server-side rendering">
+          <img src="/assets/img/case-study/icons/logo_Nextjs.svg" alt="Next.js server-side rendering">
         </div>
         <div>
-          <img src="/assets/img/case-study/icons/Percona-logo-clickhouse.webp" alt="Airtable CMS/CRM">
-        </div>
-        <div>
-          <img src="/assets/img/case-study/icons/Percona-logo-kubernetes.webp" alt="Kubernetes">
+          <img src="/assets/img/case-study/icons/logo_airtable.svg" alt="Airtable CMS/CRM">
         </div>
       </div>
 
