Adding text tweaks by Percona

--- a/_pages/case-study/percona/percona.html
+++ b/_pages/case-study/percona/percona.html
@@ -27,7 +27,7 @@ keywords: ''
         </div>
         <div class="column-wrapper column-content big remove-margin">
           <h2>Client</h2>
-          <div><strong><a class="content-link" href="https://www.percona.com/" target="_blank" rel="noopener noreferrer nofollow">Percona</a></strong> is a leading provider of open-source database software and services. An average number of monthly users counts [number] engineers, product managers, and other tech specialists. Percona offers a range of products and services related to database management, including support, consulting, training, and managed services. Their customers include a wide range of organizations, from small startups to large enterprises, and their software is used by many popular websites and applications, such as Cisco, Adobe, Netflix, Zoho.</div>
+          <div><strong><a class="content-link" href="https://www.percona.com/" target="_blank" rel="noopener noreferrer nofollow">Percona</a></strong> is widely recognized as a world-class open-source database software, support, and services company. The organization is dedicated to helping businesses make databases and applications run better through a unique combination of expertise and open-source software. Percona works with numerous global brands across many industries creating a unified experience to monitor, manage, secure, and optimize database environments on any infrastructure.</div>
           <br />
           <div><strong>Industry</strong>: Software Development</div>
           <div><strong>Location</strong>: USA</div>
@@ -41,11 +41,11 @@ keywords: ''
         <div class="column-wrapper column-content big">
           <h2>Challenge</h2>
           <div>
-            <strong>Percona</strong> had a lot of new ideas and requirements for the Percona Monitoring and Management (PMM) solution. The product backlog was full, and roadmaps were created for the next few years. Percona prioritized revamping the existing Telemetry service as one of the most important features to implement. The business role of Telemetry is to enable data-backed decision-making processes.
+            <strong>Percona</strong> had a lot of new ideas and requirements for the complex topic of database monitoring and management. They had a multi-year product roadmap and an ever-increasing backlog of ideas, but they needed assistance with a telemetry project that was critical to their understanding of how and where to provide the most value to their users and customers. Although an existing system was in place, it was incapable of adapting to their growing needs and hindered their ability to make data-backed decisions.
           </div>
           <br />
           <div>
-            The service should have been solving data collection challenges and thus providing information that would help to structure and prioritize the implementation of the next scope of product development. From a technical perspective, Telemetry had to be lightweight, scalable, and easy to use. Current Percona Teams had limited capacity to deliver all crucial features within the upcoming Release. So Percona partnered with Implex to design and revamp their existing Telemetry service and make it configurable and easy to change.
+            To address this issue, they required a service that could overcome data collection challenges and provide information to help structure and prioritize the next phases of product development. The telemetry service needed to be lightweight, scalable, and user-friendly. As the current teams were already at capacity and focused on essential features, they were doubtful they could fit it into their packed schedule anytime soon. Percona turned to Implex to design and implement a revamped telemetry service that would be highly configurable and easy to modify.
           </div>
         </div>
         <div class="column-wrapper center-content huge remove-margin">
@@ -62,14 +62,14 @@ keywords: ''
           authorName="Stephen Hoffman"
           authorPosition="SVP, Engineering at Percona"
           authorUrl="https://www.linkedin.com/in/stephenhoffman-rdu/"
-          content="\"Here should be your 5-stars feedback :-))).Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eget placerat mi. Morbi erat dolor, facilisis et viverra et, maximus vitae tortor. Cras iaculis purus risus, in euismod nunc fringilla vel. Maecenas quis rutrum lectus.\""
+          content="\"When we engaged with Implex, we figured they might be able to help us out with just one project. The speed that they were able to implement the solution and results they delivered was so impressive we looked for more ways to involve them in our roadmap activities. They’ve become a critical piece of our development strategy and a trusted partner!\""
         %}
         {% include quote/quote.html
           avatarUrl="/assets/img/case-study/percona/David-Poole-200.webp"
           authorName="David Poole"
           authorPosition="Senior Director of Engineering"
           authorUrl="https://www.linkedin.com/in/dwhpoole/"
-          content="\"Here should be your 5-stars feedback :-))).Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eget placerat mi. Morbi erat dolor, facilisis et viverra et, maximus vitae tortor. Cras iaculis purus risus, in euismod nunc fringilla vel. Maecenas quis rutrum lectus.\""
+          content="\"The Telemetry project Implex delivered for us not only exceeded our expected value, but they made substantial contributions to improve processes, practices and tooling while doing so. The quality of their efforts along with their valued contributions made it an easy choice for us to look to expand their areas of responsibility. We consider Implex a trusted, valued, and integral partner.\""
         %}
       </div>
     </div>
