Best of Masters the whole case in one commit. Plus 1st picture change in Quotium

--- a/_pages/case-study/quotium/quotium.html
+++ b/_pages/case-study/quotium/quotium.html
@@ -2,7 +2,7 @@
 title: "How to turn an idea into a lead-generation website | Implex"
 description: "See how we transformed Quotium's innovative vision into a novel mental-map-based website, integrated with Airtable to be a successful lead-generation machine"
 ogDescription: "See how we transformed Quotium's innovative vision into a novel mental-map-based website, integrated with Airtable to be a successful lead-generation machine"
-ogImage: "/assets/img/case-study/percona/og-image-case-study_Percona-1200.webp"
+ogImage: "/assets/img/case-study/quotium/og-image-case-study_Quotium-1200.png"
 permalink: /case-study/quotium
 canonicalLink: ""
 layout: default-static-header
@@ -22,7 +22,7 @@ keywords: ''
     <div class="content">
       <h1 class="main-title">Turning unusual vision into a novel map-based web product</h1>
       <div class="col-2 margin-top">
-        <div class="column-wrapper big remove-margin">
+        <div class="column-wrapper big remove-margin ">
           <div class="image" id="image1" style="background-image: url('/assets/img/case-study/quotium/1-Quotium-client-1280.webp')"></div>
         </div>
         <div class="column-wrapper column-content huge remove-margin">
